--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li>
           <li>
             <span><img src="./images/internet.png" alt="internet" class="info_icon" /></span>
-            <span>www.monsitweb.fr</span>
+            <span>jeromeconton.github.io/</span>
           </li>
           <li>
             <span><img src="./images/linkedin.png" alt="internet" class="info_icon" /></span>
