--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CV en CSS et HTML Responsive </title>
+  <title>Responsive CV HTML et CSS  </title>
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
 </head>
@@ -35,11 +35,11 @@
           </li>
           <li>
             <span><img src="./images/internet.png" alt="internet" class="info_icon" /></span>
-            <span>jeromeconton.github.io/</span>
+            <span>jeromeconton.github.io</span>
           </li>
           <li>
             <span><img src="./images/linkedin.png" alt="internet" class="info_icon" /></span>
-            <span>www.linkedin.fr</span>
+            <span>www.linkedin.com/in/jerome-conton</span>
           </li>
           <li id="cdg">
             <span><img src="./images/georeperage.png" alt="internet" class="info_icon" /></span>
@@ -101,7 +101,7 @@
             <h3>connaissances</h3>
             <p class="profil_p">
               Connaissance des langages web : HTML, CSS, JavaScript. <br>
-              Connaissance de la mise en place de bases de données : PostgreSQL, MongoDB. <br>
+              Connaissance de la mise en place de bases de données : PostgreSQL, MongoDB puis Node.js pour le back <br>
               connaissances en front avec React. <br>
               Capacité à travailler en équipe et à communiquer avec les clients. <br>
               Connaissance de Git et de la gestion des versions. <br>
