--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive CV HTML et CSS  </title>
+  <title>CV Jérôme CONTON  </title>
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
 </head>
@@ -19,7 +19,7 @@
       <header>
         <img src="./images/photoCvPng.png" alt="photo du cv" class="photo" />
         <h1>jérôme conton</h1>
-        <h2 class="metier">developpeur web</h2>
+        <h2 class="metier">developpeur web FullStack JavaScript</h2>
       </header>
 
       <section id="contact">
@@ -39,7 +39,7 @@
           </li>
           <li>
             <span><img src="./images/linkedin.png" alt="internet" class="info_icon" /></span>
-            <span>www.linkedin.com/in/jerome-conton</span>
+            <span>linkedin.com/in/jerome-conton</span>
           </li>
           <li id="cdg">
             <span><img src="./images/georeperage.png" alt="internet" class="info_icon" /></span>
