--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
         <ul class="info_perso">
           <li>
             <span><img src="./images/téléphone.png" alt="telephone" class="info_icon" /></span>
-            <span>06 74 38 77 69</span>
+            <a href="tel:0674387769">06 74 38 77 69</a>
           </li>
           <li>
             <span><img src="./images/mail.png" alt="email" class="info_icon" /></span>
-            <span>conton.jerome@yahoo.fr</span>
+            <a href = "mailto:conton.jerome@yahoo.fr">conton.jerome@yahoo.fr</a>
           </li>
           <li>
             <span><img src="./images/internet.png" alt="internet" class="info_icon" /></span>
-            <span>jeromeconton.github.io</span>
+            <a href="https://jeromeconton.github.io" target="_blank">jeromeconton.github.io</a>
           </li>
           <li>
             <span><img src="./images/linkedin.png" alt="internet" class="info_icon" /></span>
-            <span>linkedin.com/in/jerome-conton</span>
+            <a href="https://www.linkedin.com/in/jerome-conton" target="_blank">linkedin.com/in/jerome-conton</a>
           </li>
           <li id="cdg">
             <span><img src="./images/georeperage.png" alt="internet" class="info_icon" /></span>
-            <span>roissy charles de gaulle</span>
+            <a href="https://goo.gl/maps/wKCXm2cApzjVXX3dA" target="_blank">roissy charles de gaulle</a>
           </li>
         </ul>
       </section>
