--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
           </p> 
           <p class="profil_p">
             <br>
+            Toujours en formation, je suis actuellement en spécialisation back-end "API & DATA" puis par la suite, je compte suivre la spécialisation REACT avec cette école.
+          </p>
+          <p class="profil_p">
+            <br>
             Je suis convaincu que ma passion pour le développement web, ainsi que mes compétences et mon expérience, me permettent de répondre à vos besoins en matière de développement d'applications web de qualité.
           </p>
 
