--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </p> 
           <p class="profil_p">
             <br>
-            Toujours en formation, je suis actuellement en spécialisation back-end "API & DATA" puis par la suite, je compte suivre la spécialisation REACT avec cette école.
+            Toujours en formation chez O'clock, je suis actuellement en spécialisation back-end "API & DATA" puis par la suite, je compte suivre la spécialisation REACT avec cette école.
           </p>
           <p class="profil_p">
             <br>
@@ -106,7 +106,7 @@
             <p class="profil_p">
               Connaissance des langages web : HTML, CSS, JavaScript. <br>
               Connaissance de la mise en place de bases de données : PostgreSQL, MongoDB puis Node.js pour le back <br>
-              connaissances en front avec React. <br>
+              Connaissances en front avec React. <br>
               Capacité à travailler en équipe et à communiquer avec les clients. <br>
               Connaissance de Git et de la gestion des versions. <br>
             </p>
