--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       
       <section id="formation">
         <h3>Langues</h3>
-        <p>Anglais compétences professionnelles</p>
-        <p>Français </p>
+        <p class="formation">Anglais compétences pros</p>
+        <p class="formation">Français </p>
       </section>
 
       <section id="loisir">
@@ -131,15 +131,15 @@
           <p class="comp_p">Connaissance de la sécurité web et des meilleures pratiques de sécurité pour le développement web.</p>           
 
           <p class="technos_icon">
-            <img src="./images/icons8-html-5-48.png" alt="html_css_js">
-            <img src="./images/icons8-css3-48.png" alt="css">
-            <img src="./images/icons8-javascript-48.png" alt="postgresql">
-            <img src="./images/icons8-express-js-48.png" alt="express">
-            <img src="./images/icons8-nodejs-48.png" alt="nodejs">
-            <img src="./images/icons8-postgresql-48.png" alt="postgresql">
-            <img src="./images/icons8-mongodb-48.png" alt="mongodb">
-            <img src="./images/icons8-react-48.png" alt="react">
-            <img src="./images/icons8-github-48.png" alt="github">
+            <img src="./images/icons8-html-5-48.png" alt="html" class="icon">
+            <img src="./images/icons8-css3-48.png" alt="css" class="icon">
+            <img src="./images/icons8-javascript-48.png" alt="javascript" class="icon">
+            <img src="./images/icons8-express-js-48.png" alt="express" class="icon">
+            <img src="./images/icons8-nodejs-48.png" alt="nodejs" class="icon">
+            <img src="./images/icons8-postgresql-48.png" alt="postgresql" class="icon">
+            <img src="./images/icons8-mongodb-48.png" alt="mongodb" class="icon">
+            <img src="./images/icons8-react-48.png" alt="react" class="icon">
+            <img src="./images/icons8-github-48.png" alt="github" class="icon">
           </p>
         </section>
 
