--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="site internet du curriculum vitae de Jérôme Conton">
+
   <title>CV Jérôme CONTON  </title>
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
@@ -17,7 +19,7 @@
     <section id="left_side">
 
       <header>
-        <img src="./images/photo cv.jpg" alt="photo du cv" class="photo" />
+        <img src="./images/photoCv.jpg" alt="photo du cv de jerome conton" class="photo" />
         <h1>jérôme conton</h1>
         <h2 class="metier">developpeur web JavaScript</h2>
       </header>
