--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="site internet du curriculum vitae de Jérôme Conton">
 
-  <title>CV Jérôme CONTON  </title>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" /> 
+  
+  <title>CV Jérôme CONTON  </title>
 </head>
 
 <body>
