--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <section id="profil">
           <h3>profil</h3>
-          <p class="profil_p">Après avoir passer 16 ans dans la restauration, de chef de rang à assistant de direction puis commercial pour les restaurants et enfin restauration aérienne sur Roissy, j'ai décidé de créer une entreprise de transport de personnes.</p>
+          <p class="profil_p">Après avoir passé 16 ans dans la restauration, de chef de rang à assistant de direction puis commercial pour les restaurants et enfin restauration aérienne sur Roissy, j'ai décidé de créer une entreprise de transport de personnes.</p>
           <p class="profil_p">J'ai développé mon propre site web lors de la création de mon entreprise, ce qui a éveillé mon intérêt pour le développement web. Aujourd'hui, je suis en reconversion professionnelle pour approfondir mes compétences dans ce domaine.</p>
           <p class="profil_p">Au cours de mes études, j'ai acquis des compétences en développement web, notamment une compréhension des technologies telles que HTML, CSS, JavaScript, et bien d'autres encore.</p>
           <p class="profil_p">Je suis constamment en quête d'amélioration de mes compétences en développement web.</p>
